fix svg issues on firefox and positioning issues all over

--- a/app/App.css
+++ b/app/App.css
@@ -20,7 +20,23 @@
   flex-flow: row wrap;
   position: absolute;
   top: 0;
+  left: 0;
   background-color: rgba(0,0,0,0);
+}
+
+.landing-page {
+  margin-top: 2em;
+}
+
+.about-page {
+  margin-top: 2em;
+  background-color: white;
+  display: flex;
+}
+
+.full-text-page {
+  margin-top: 2em;
+  display: flex;
 }
 
 div {
@@ -53,7 +69,7 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  /*position: fixed;*/
 }
 
 .start-button {
@@ -63,17 +79,17 @@ button:hover {
 }
 
 #timeline-container {
-  position: fixed;
+  /*position: fixed;*/
   margin-top: 50px;
 }
 
 .info-container {
   /*margin-top: 18%;*/
-  margin-top: 16em;
+  margin-top: 2em;
   height: 100%;
   display: flex;
   flex-direction: row;
-  position: fixed;
+  /*position: fixed;*/
   justify-content: space-between;
   /*align-items: center;*/
   background-color: rgba(255, 0, 0, 0);
@@ -109,36 +125,19 @@ button:hover {
 
 .circle {
   transition: r .5s ease;
-  fill: white;
   stroke: lightskyblue;
   stroke-width: 2;
-  r: 15;
 }
 
 .active-circle {
-  fill: lightskyblue;
-  r: 20;
+  /*fill: lightskyblue;
+  r: 20;*/
 }
 
 .circle:hover {
   transition: r .5s ease;
   fill: lightskyblue;
   r: 20;
-}
-
-.landing-page {
-  margin-top: 16em;
-}
-
-.about-page {
-  margin-top: 15em;
-  background-color: white;
-  display: flex;
-}
-
-.full-text-page {
-  margin-top: 15em;
-  display: flex;
 }
 
 h1 {
@@ -155,7 +154,7 @@ p {
 }
 
 #timeline-svg {
-  padding: 3%;
+  padding: 5%;
 }
 
 #timeline-container {
